--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: nmap
     volumes:
       - ./listado.list:/listado.list
-      - ./mycert.crt.crt:/etc/grafana/grafana.crt
+      - ./mycert.crt:/etc/grafana/grafana.crt
       - ./private.key:/etc/grafana/grafana.key
     environment:
       - INFLUXDB_HOST=influxdb
